--- a/src/app/components/shared/vehicle-card/vehicle-card.component.html
+++ b/src/app/components/shared/vehicle-card/vehicle-card.component.html
@@ -40,10 +40,13 @@
       <div class="col-sm-7 align-self-center">
         <span class="fonts" style="font-size: 20px;">{{theVehicle.vehicleType.pricePerDay}}/Day</span>
       </div>
-      <div class="col-sm-5" *ngIf="loggedInUser">
-        <button class="btn btn-primary float-right" *ngIf="loggedInUser.userRole=='customer'" (click)="handleCustomerClick()">Rent This</button>
-        <span *ngIf="loggedInUser.userRole=='administrator'">
-        </span>
+      <div class="col-sm-5 align-self-center" *ngIf="loggedInUser">
+        <div *ngIf="loggedInUser.userRole=='customer'">
+          <button class="btn btn-primary float-right" (click)="handleCustomerClick()">Rent This</button>
+        </div>
+        <div *ngIf="loggedInUser.userRole=='administrator'">
+          <i class="fas fa-trash" style="font-size: 22px; color: rgba(0, 0, 0, 0.7); cursor: pointer;" (click)="openDeleteModalInAdmin()"></i>
+        </div>
       </div>
       <div class="col-sm-5" *ngIf="!loggedInUser">
         <button class="btn btn-primary float-right" (click)="handleGuestClick()">Rent This</button>
