added the new validations on name field and added new sign up fields

--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
@@ -113,6 +113,12 @@
                 *ngIf="vehicleForm.get('licensePlate').invalid && vehicleForm.get('licensePlate').touched">Please
                 Provide
                 a Valid License Plate</span>
+
+              <span class="form-error"
+                *ngIf="vehicleForm.get('licensePlate').invalid && vehicleForm.get('licensePlate').touched && vehicleForm.get('licensePlate').errors.pattern">Please
+                Provide
+                the license plate in format: XX00 XXX </span>
+
             </div>
           </div>
           <div class="col-sm-7">
