--- a/src/app/components/admin/equipment-management/equipment-create-manage/equipment-create-manage.component.html
+++ b/src/app/components/admin/equipment-management/equipment-create-manage/equipment-create-manage.component.html
@@ -15,6 +15,10 @@
           <span class="form-error" *ngIf="theForm.get('equipmentName').touched && theForm.get('equipmentName').invalid">
             Please Provide a Valid Equipment Name
           </span>
+
+          <span class="form-error" *ngIf="theForm.get('equipmentName').touched && theForm.get('equipmentName').invalid && theForm.get('equipmentName').errors.pattern">
+            Please ensure that the name only has aplhabetical characters and no numerics and spaces.
+          </span>
         </div>
         <div class="form-group">
           <label class="fonts">Quantity at Hand</label>
