--- a/src/app/components/guest/sign-up/sign-up.component.html
+++ b/src/app/components/guest/sign-up/sign-up.component.html
@@ -11,7 +11,7 @@
       <!-- single step in the form -->
       <form [formGroup]="userInfoForm">
         <!-- first form for stepper 01 -->
-        <ng-template matStepLabel>Provide Your Information</ng-template>
+        <ng-template matStepLabel>Your Information</ng-template>
 
         <div class="row">
           <div class="col-sm-6">
@@ -23,6 +23,10 @@
               <span class="form-error"
                 *ngIf="userInfoForm.get('firstName').invalid && userInfoForm.get('firstName').touched">Please Provide a
                 Valid First Name</span>
+              <span class="form-error"
+                *ngIf="userInfoForm.get('firstName').invalid && userInfoForm.get('firstName').touched && userInfoForm.get('firstName').errors.pattern"><br>
+                Please ensure that your first name has only alphabetical characters and no numerics or spaces
+              </span>
             </div>
           </div>
 
@@ -34,6 +38,10 @@
               <span class="form-error"
                 *ngIf="userInfoForm.get('lastName').invalid && userInfoForm.get('lastName').touched">Please Provide a
                 Valid Last Name</span>
+              <span class="form-error"
+                *ngIf="userInfoForm.get('lastName').invalid && userInfoForm.get('lastName').touched && userInfoForm.get('lastName').errors.pattern"><br>
+                Please ensure that your last name has only alphabetical characters and no numerics or spaces
+              </span>
             </div>
           </div>
         </div>
@@ -112,14 +120,15 @@
       <!-- stepper 01 for form 02 -->
       <form [formGroup]="passwordForm">
         <!-- form for stepper 02 -->
-        <ng-template matStepLabel>Provide a Secure Password</ng-template>
+        <ng-template matStepLabel>Your Secure Password</ng-template>
 
         <div class="row">
           <div class="col-sm-12">
             <div class="form-group">
               <label for="passwordOneField"><b class="fonts">Enter Password</b></label>
               <input type="password" id="passwordOneField" class="form-control"
-                placeholder="Enter Your Password (Required)" [formControlName]="'firstPassword'" minlength="6" maxlength="15">
+                placeholder="Enter Your Password (Required)" [formControlName]="'firstPassword'" minlength="6"
+                maxlength="15">
               <span class="form-error"
                 *ngIf="passwordForm.get('firstPassword').invalid && passwordForm.get('firstPassword').touched">Please
                 Provide a
@@ -165,7 +174,7 @@
 
     <mat-step>
       <!-- stepper 03 for form 03 -->
-      <ng-template matStepLabel>Provide a Profile Picture</ng-template>
+      <ng-template matStepLabel>Your Profile Picture</ng-template>
       <form>
         <!-- form 03 for stepper 03 -->
         <div class="row">
@@ -197,6 +206,8 @@
         </div>
       </form>
 
+
+
       <div class="row justify-content-center mt-2" *ngIf="!signUpProceed">
         <div class="col-sm-9">
           <div class="alert alert-danger">
@@ -207,6 +218,56 @@
 
       <button class="btn btn-primary mt-3" style="float: right; width: 30%;" type="button"
         [disabled]="(!passwordForm.invalid && !userInfoForm.invalid && imageLoaded === false)"
+        matStepperNext>Next</button>
+      <button class="btn btn-warning mt-3 mr-3" style="float: right;width: 20%;" matStepperPrevious>Previous</button>
+    </mat-step>
+
+    <mat-step>
+      <!-- stepper 03 for form 03 -->
+      <ng-template matStepLabel>Your License Picture</ng-template>
+      <form>
+        <!-- form 03 for stepper 03 -->
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="form-group">
+              <div class="row">
+                <input type="file" accept="image/jpeg" style="display:none;" #chooseLicense
+                  (change)="loadLicense(chooseLicense.files[0])" multiple="false">
+                <div class="col-sm-12" style="text-align: center;">
+                  <label><b class="fonts">Provide Your License Picture (maximum - 2MB)</b></label>
+                  <br>
+                  <button class="btn btn-secondary" (click)="chooseLicense.click()" type="button"
+                    style="width: 30%;">Upload a Picture of Your Drivers License</button>
+
+                  <div class="alert alert-warning mt-2" *ngIf="licenseSizeExceeded">
+                    Image Size Exceeded 2MB. Please Select One Again
+                  </div>
+                </div>
+              </div>
+
+              <div class="row justify-content-center mt-3" *ngIf="licenseLoaded">
+                <div class="col-sm-12" style="text-align: center;">
+                  <img [src]="licenseImageUrl" class="img-responsive" width="350px" height="250px"
+                    style="border-radius: 10px;">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+
+
+
+      <div class="row justify-content-center mt-2" *ngIf="!signUpProceed">
+        <div class="col-sm-9">
+          <div class="alert alert-danger">
+            Invalid Data Provided. Please Check Your Data Before Proceeding
+          </div>
+        </div>
+      </div>
+
+      <button class="btn btn-primary mt-3" style="float: right; width: 30%;" type="button"
+        [disabled]="(passwordForm.invalid === true) || (userInfoForm.invalid === true) || (imageLoaded === false) || (licenseLoaded === false)"
         (click)="createAccount()">Create Account</button>
       <button class="btn btn-warning mt-3 mr-3" style="float: right;width: 20%;" matStepperPrevious>Previous</button>
     </mat-step>
