--- a/src/app/components/guest/sign-up/sign-up.component.html
+++ b/src/app/components/guest/sign-up/sign-up.component.html
@@ -223,10 +223,10 @@
     </mat-step>
 
     <mat-step>
-      <!-- stepper 03 for form 03 -->
+      <!-- stepper 04 for form 04 -->
       <ng-template matStepLabel>Your License Picture</ng-template>
       <form>
-        <!-- form 03 for stepper 03 -->
+        <!-- form 04 for stepper 04 -->
         <div class="row">
           <div class="col-sm-12">
             <div class="form-group">
@@ -234,13 +234,13 @@
                 <input type="file" accept="image/jpeg" style="display:none;" #chooseLicense
                   (change)="loadLicense(chooseLicense.files[0])" multiple="false">
                 <div class="col-sm-12" style="text-align: center;">
-                  <label><b class="fonts">Provide Your License Picture (maximum - 2MB)</b></label>
+                  <label><b class="fonts">Provide Your License Picture (maximum - 5MB)</b></label>
                   <br>
                   <button class="btn btn-secondary" (click)="chooseLicense.click()" type="button"
                     style="width: 30%;">Upload a Picture of Your Drivers License</button>
 
                   <div class="alert alert-warning mt-2" *ngIf="licenseSizeExceeded">
-                    Image Size Exceeded 2MB. Please Select One Again
+                    Image Size Exceeded 5MB. Please Select One Again
                   </div>
                 </div>
               </div>
@@ -268,6 +268,56 @@
 
       <button class="btn btn-primary mt-3" style="float: right; width: 30%;" type="button"
         [disabled]="(passwordForm.invalid === true) || (userInfoForm.invalid === true) || (imageLoaded === false) || (licenseLoaded === false)"
+        matStepperNext>Next</button>
+      <button class="btn btn-warning mt-3 mr-3" style="float: right;width: 20%;" matStepperPrevious>Previous</button>
+    </mat-step>
+
+    <mat-step>
+      <!-- stepper 05 for form 05 -->
+      <ng-template matStepLabel>Account Ownership</ng-template>
+      <form>
+        <!-- form 05 for stepper 05 -->
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="form-group">
+              <div class="row">
+                <input type="file" accept="image/jpeg" style="display:none;" #chooseOtherImage
+                  (change)="loadOtherIdentification(chooseOtherImage.files[0])" multiple="false">
+                <div class="col-sm-12" style="text-align: center;">
+                  <label><b class="fonts">We require an additional form of identification. <br>Please provide a picture of a utility bill or council tax statement within the last 3 months <br>(maximum - 5MB)</b></label>
+                  <br>
+                  <button class="btn btn-secondary" (click)="chooseOtherImage.click()" type="button"
+                    style="width: 30%;">Upload a Picture of Your Utility Bill or Council Tax Statement</button>
+
+                  <div class="alert alert-warning mt-2" *ngIf="otherIdentityImageSizeExceeded">
+                    Image Size Exceeded 5MB. Please Select One Again
+                  </div>
+                </div>
+              </div>
+
+              <div class="row justify-content-center mt-3" *ngIf="otherIdentityImage">
+                <div class="col-sm-12" style="text-align: center;">
+                  <img [src]="otherIdentityImageUrl" class="img-responsive" width="350px" height="250px"
+                    style="border-radius: 10px;">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+
+
+
+      <div class="row justify-content-center mt-2" *ngIf="!signUpProceed">
+        <div class="col-sm-9">
+          <div class="alert alert-danger">
+            Invalid Data Provided. Please Check Your Data Before Proceeding
+          </div>
+        </div>
+      </div>
+
+      <button class="btn btn-primary mt-3" style="float: right; width: 30%;" type="button"
+        [disabled]="(passwordForm.invalid === true) || (userInfoForm.invalid === true) || (imageLoaded === false) || (licenseLoaded === false) || (otherIdentityImageLoaded === false)"
         (click)="createAccount()">Create Account</button>
       <button class="btn btn-warning mt-3 mr-3" style="float: right;width: 20%;" matStepperPrevious>Previous</button>
     </mat-step>
