--- a/src/app/components/admin/equipment-management/equipment-create-manage/equipment-create-manage.component.html
+++ b/src/app/components/admin/equipment-management/equipment-create-manage/equipment-create-manage.component.html
@@ -17,7 +17,7 @@
           </span>
 
           <span class="form-error" *ngIf="theForm.get('equipmentName').touched && theForm.get('equipmentName').invalid && theForm.get('equipmentName').errors.pattern">
-            Please ensure that the name only has aplhabetical characters and no numerics and spaces.
+            Please ensure that the name only has aplhabetical characters and no numerics.
           </span>
         </div>
         <div class="form-group">
@@ -37,7 +37,7 @@
           </ng-template>
         </div>
         <div class="form-group">
-          <label class="fonts">Price Per Day</label>
+          <label class="fonts">Price Per Day (LKR)</label>
           <input type="text" [formControlName]="'pricePerDay'" class="form-control"
             placeholder="Provide Price Per Day..." />
           <span class="form-error" *ngIf="theForm.get('pricePerDay').touched && theForm.get('pricePerDay').invalid">
