--- a/src/app/components/shared/user-profile/user-profile.component.html
+++ b/src/app/components/shared/user-profile/user-profile.component.html
@@ -88,14 +88,23 @@
       <div class="col-sm-6">
         <div class="form-group">
           <label><b class="fonts">Re-Enter Password</b></label>
-          <input type="password" value="" placeholder="Re-Enter Your Password (6 to 15 Characters)"
-            class="form-control" [formControlName]="'secondPassword'" (input)="validatePassword()">
+          <input type="password" value="" placeholder="Re-Enter Your Password (6 to 15 Characters)" class="form-control"
+            [formControlName]="'secondPassword'" (input)="validatePassword()">
         </div>
       </div>
     </div>
     <span class="form-error" *ngIf="!passwordValid">
       Password Not Valid (Provide Characters Between 6 and 15 for Password in Both Fields)
     </span>
+
+    <div class="row" *ngIf="loggedInUser.userRole==='customer'">
+      <div class="col-lg-6 col-sm-12 mb-1">
+        <button class="btn btn-primary" type="button" style="width: 100%;" (click)="showLicense()">View Driving License</button>
+      </div>
+      <div class="col-lg-6 col-sm-12 mb-1">
+        <button class="btn btn-primary" type="button" style="width: 100%;" (click)="showOther()">View Other Identification</button>
+      </div>
+    </div>
   </div>
 
   <div class="modal-footer">
