--- a/src/app/components/customer/rent-vehicle/show-vehicle-on-rental/show-vehicle-on-rental.component.css
+++ b/src/app/components/customer/rent-vehicle/show-vehicle-on-rental/show-vehicle-on-rental.component.css
@@ -1,3 +1,12 @@
 .content{
   font-size: 16px;
 }
+
+.heading{
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.next-heading{
+  font-weight: 450;
+}
