--- a/src/app/components/customer/rent-vehicle/show-vehicle-on-rental/show-vehicle-on-rental.component.html
+++ b/src/app/components/customer/rent-vehicle/show-vehicle-on-rental/show-vehicle-on-rental.component.html
@@ -1,3 +1,42 @@
 <div class="content">
-  <p>show-vehicle-on-rental works!</p>
+  <div class="row">
+    <div class="col-sm-4 col-md-4 col-lg-4">
+      <img [src]="vehicleToBeRented.vehicleImage" style="width: 100%; height: 100%;border-radius: 5px;">
+    </div>
+    <div class="col-sm-8 col-md-8 col-lg-8">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <span class="heading">{{vehicleToBeRented.vehicleName}}</span>&nbsp;&nbsp;<span class="next-heading">
+            ({{vehicleToBeRented.vehicleType.size | titlecase}} {{vehicleToBeRented.vehicleType.typeName |
+            titlecase}})</span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <span class="next-heading">License Plate: {{vehicleToBeRented.licensePlate}}</span>
+          <hr>
+        </div>
+      </div>
+
+      <div class="row mt-2">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <div class="row">
+            <div class="col-sm-4">
+              <i class="fas fa-user-alt"></i>: {{vehicleToBeRented.seatingCapacity}} Person(s)
+            </div>
+            <div class="col-sm-4">
+              <i class="fas fa-gas-pump"></i>: {{vehicleToBeRented.fuelType}}
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-sm-4">
+              <img src="../../../../assets/gearbox.svg" width="20" height="20">:
+              {{vehicleToBeRented.transmission}}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
