added viewing available additional equipment

--- a/src/app/components/admin/equipment-management/delete-equipment-prompt/delete-equipment-prompt.component.html
+++ b/src/app/components/admin/equipment-management/delete-equipment-prompt/delete-equipment-prompt.component.html
@@ -11,8 +11,8 @@
       <i class="fal fa-exclamation-triangle" style="font-size: 45px; color: red;"></i>
     </div>
     <div class="col-sm-10">
-      Are you sure you want to delete the additional equipment - <span class="fonts"><i>{{theEquipment.equipmentName
-          |titlecase}}</i></span> from Banger
+      Are you sure you want to delete the additional equipment - <span
+        class="fonts"><i>{{theEquipment.equipmentName}}</i></span> from Banger
       and Co.? This action cannot be reversed.
     </div>
   </div>
