--- a/src/app/components/customer/rent-vehicle/rent-vehicle.component.html
+++ b/src/app/components/customer/rent-vehicle/rent-vehicle.component.html
@@ -72,7 +72,7 @@
     </div>
   </div>
   <ng-template #showError>
-    <div class="row" *ngIf="isError">
+    <div class="row mt-2" *ngIf="isError">
       <div class="col-sm-12 col-md-12 col-lg-12">
         <div class="alert alert-danger">
           <h5 class="alert-heading">Vehicle Not Retrieved</h5>
@@ -81,7 +81,7 @@
         </div>
       </div>
     </div>
-    <div class="row" *ngIf="!isError">
+    <div class="row mt-2" *ngIf="!isError">
       <div class="col-sm-12 col-md-12 col-lg-12">
         <div class="alert alert-warning">
           <h5 class="alert-heading">Vehicle Loading</h5>
