--- a/src/app/components/customer/rent-vehicle/show-available-additional-equipment/show-available-additional-equipment.component.html
+++ b/src/app/components/customer/rent-vehicle/show-available-additional-equipment/show-available-additional-equipment.component.html
@@ -1,3 +1,59 @@
 <div class="content">
-  <p>show-available-additional-equipment works!</p>
+  <ngx-spinner type="ball-clip-rotate" size="medium" [name]="'equipmentSpinner'" [fullScreen]="false" [bdColor]="'none'"
+    [color]="'black'">
+  </ngx-spinner>
+  <div class="row">
+    <div class="col-sm-12 col-lg-12 col-md-12" *ngIf="isError && !loadedEquipments">
+      <div class="alert alert-danger">
+        <h5 class="alert-heading">Failed to Load Add Ons</h5>
+        {{errorMessage}}
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-lg-12 col-md-12" *ngIf="!isError && loadedEquipments.length === 0">
+      <div class="alert alert-info">
+        <h5 class="alert-heading">No Add Ons</h5>
+        There are no additional equipments available that can be added to your rental at the moment.
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-lg-12 col-md-12" *ngIf="!isError && loadedEquipments.length > 0">
+      <div class="row">
+        <div class="col-sm-12">
+          <span>
+            <h5 class="modal-heading" style="display: inline;">Customize Rental With Additional Equipment</h5>
+            (Optional*)
+          </span>
+          <hr>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <div class="row" *ngFor="let item of loadedEquipments">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+              <div class="row">
+                <div class="col-sm-8 col-md-8 col-lg-8">
+                  <div class="fonts">
+                    {{item.equipmentName}}
+                  </div>
+                  <div>
+                    {{item.pricePerDay}} Per Day
+                  </div>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 align-self-center">
+                  <!-- <div class="float-right" style="display: inline;">
+                    <button class="btn btn-outline-primary fonts" style="width:25%; display: inline;">-</button>
+                    <input type="text" class="form-control-plaintext ml-1 mr-1" readonly style="width:15%; height: 33%;display: inline;">
+                    <button class="btn btn-outline-primary fonts" style="width:25%; display: inline;">+</button>
+                  </div> -->
+                </div>
+              </div>
+              <hr>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
