--- a/src/app/components/customer/rent-vehicle/show-available-additional-equipment/show-available-additional-equipment.component.html
+++ b/src/app/components/customer/rent-vehicle/show-available-additional-equipment/show-available-additional-equipment.component.html
@@ -42,11 +42,21 @@
                   </div>
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 align-self-center">
-                  <!-- <div class="float-right" style="display: inline;">
-                    <button class="btn btn-outline-primary fonts" style="width:25%; display: inline;">-</button>
-                    <input type="text" class="form-control-plaintext ml-1 mr-1" readonly style="width:15%; height: 33%;display: inline;">
-                    <button class="btn btn-outline-primary fonts" style="width:25%; display: inline;">+</button>
-                  </div> -->
+                  <button class="btn btn-outline-primary fonts float-right" style="width:25%; display: inline;"
+                    (click)="add(item.equipmentId)" [disabled]="item.quantitySelectedForRental===3">+</button>
+
+                  <input type="text" class="form-control-plaintext ml-1 mr-1 float-right" readonly
+                    [value]="item.quantitySelectedForRental"
+                    style="width:15%; height: 33%;display: inline; text-align: center;">
+
+                  <button class="btn btn-outline-primary fonts float-right" style="width:25%; display: inline;"
+                    (click)="reduce(item.equipmentId)" [disabled]="item.quantitySelectedForRental===0">-</button>
+
+                </div>
+              </div>
+              <div class="row mt-2">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                  <span class="emphasis">Maximum of 3 Can Be Added To Rental</span>
                 </div>
               </div>
               <hr>
