added validation on DB stock to selected

--- a/src/app/components/customer/rent-vehicle/total-cost/total-cost.component.html
+++ b/src/app/components/customer/rent-vehicle/total-cost/total-cost.component.html
@@ -1,3 +1,27 @@
 <div class="content">
-  <p>total-cost works!</p>
+  <h4 class="alert-heading" style="font-weight: 600;">Cost Breakdown</h4>
+  <hr>
+  <div class="row">
+    <div class="col-sm-12 col-lg-12 col-md-12 fonts">
+      Vehicle Rental Price:
+      <hr>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 col-lg-12 col-md-12 fonts">
+      Equipment Total
+      <hr>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 col-lg-12 col-md-12 fonts">
+      Total Cost For Rental:
+      <hr>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 col-lg-12 col-md-12">
+      <button style="width: 100%;" class="btn btn-primary" (click)="proceedRental()">Proceed With Rental</button>
+    </div>
+  </div>
 </div>
