--- a/src/app/components/customer/rent-vehicle/show-available-additional-equipment/show-available-additional-equipment.component.html
+++ b/src/app/components/customer/rent-vehicle/show-available-additional-equipment/show-available-additional-equipment.component.html
@@ -43,20 +43,21 @@
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 align-self-center">
                   <button class="btn btn-outline-primary fonts float-right" style="width:25%; display: inline;"
-                    (click)="add(item.equipmentId)" [disabled]="item.quantitySelectedForRental===3">+</button>
+                    (click)="add(item)"
+                    [disabled]="item.quantitySelectedForRental===3 || item.quantitySelectedForRental === item.equipmentQuantity">+</button>
 
                   <input type="text" class="form-control-plaintext ml-1 mr-1 float-right" readonly
                     [value]="item.quantitySelectedForRental"
                     style="width:15%; height: 33%;display: inline; text-align: center;">
 
                   <button class="btn btn-outline-primary fonts float-right" style="width:25%; display: inline;"
-                    (click)="reduce(item.equipmentId)" [disabled]="item.quantitySelectedForRental===0">-</button>
+                    (click)="reduce(item)" [disabled]="item.quantitySelectedForRental===0">-</button>
 
                 </div>
               </div>
               <div class="row mt-2">
                 <div class="col-sm-12 col-md-12 col-lg-12">
-                  <span class="emphasis">Maximum of 3 Can Be Added To Rental</span>
+                  <span class="emphasis">{{getMessage(item)}}</span>
                 </div>
               </div>
               <hr>
