--- a/src/app/components/customer/rent-vehicle/total-cost/total-cost.component.html
+++ b/src/app/components/customer/rent-vehicle/total-cost/total-cost.component.html
@@ -1,5 +1,6 @@
 <div class="content">
   <h4 class="alert-heading" style="font-weight: 600;">Cost Breakdown</h4>
+  <h6>For x days</h6>
   <hr>
   <div class="row">
     <div class="col-sm-12 col-lg-12 col-md-12 fonts">
