--- a/src/app/components/shared/filter-vehicle-list/filter-vehicle-list.component.html
+++ b/src/app/components/shared/filter-vehicle-list/filter-vehicle-list.component.html
@@ -42,7 +42,7 @@
                   Period</button>
               </div>
             </div>
-            <div class="row" *ngIf="loggedInUser">
+            <div class="row" *ngIf="loggedInUser && userAge < 25">
               <div class="col-sm-12 col-lg-12">
                 <p class="msg">You can only rent <b>Small Town Cars</b> since you are less than 25 years of age</p>
               </div>
