--- a/src/app/components/customer/rent-vehicle/make-rental/make-rental.component.html
+++ b/src/app/components/customer/rent-vehicle/make-rental/make-rental.component.html
@@ -129,7 +129,7 @@
         </div>
       </div>
 
-      <button class="btn btn-primary float-right ml-1" style="width: 25%;" matStepperNext>Place Rental</button>
+      <button class="btn btn-primary float-right ml-1" style="width: 25%;" matStepperNext (click)="placeRental()">Place Rental</button>
       <button class="btn btn-warning float-right" style="width: 15%;" matStepperPrevious>Back</button>
     </mat-step>
   </mat-horizontal-stepper>
