--- a/src/app/components/customer/rent-vehicle/make-rental/make-rental.component.html
+++ b/src/app/components/customer/rent-vehicle/make-rental/make-rental.component.html
@@ -7,85 +7,96 @@
   <mat-horizontal-stepper [linear]="true" style="font-family: 'Inter', sans-serif !important;">
     <mat-step>
       <ng-template matStepLabel>Let's Confirm Your Rental</ng-template>
-
       <div class="row mt-2">
         <div class="col-sm-12">
-          <div class="alert alert-info">
-            <h5 class="alert-heading fonts">Rental Duration</h5>
-            <hr>
-            Rental to be started from <b>{{rentalDuration.pickupDate | date}}</b> at
-            <b>{{rentalDuration.pickupTime}}</b> and
-            returned to
-            Banger and Co on <b>{{rentalDuration.returnDate | date}}</b> at <b>{{rentalDuration.returnTime}}</b>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="alert alert-info">
+                <h5 class="alert-heading fonts">Rental Duration</h5>
+                <hr>
+                Rental to be started from <b>{{rentalDuration.pickupDate | date}}</b> at
+                <b>{{rentalDuration.pickupTime}}</b> and
+                returned to
+                Banger and Co on <b>{{rentalDuration.returnDate | date}}</b> at <b>{{rentalDuration.returnTime}}</b>.
+                <br>
+                Your total price is <b>LKR -{{totalCostForRental.toFixed(2)}}</b>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="alert alert-info">
+                <div class="fonts alert-heading">
+                  Vehicle Information
+                  <hr>
+                </div>
+                <div class="row mt-2">
+                  <div class="col-sm-6">
+                    Name : {{vehicleToBeRented.vehicleName}}
+                  </div>
+                  <div class="col-sm-6">
+                    Type : {{vehicleToBeRented.vehicleType.size | titlecase}} {{vehicleToBeRented.vehicleType.typeName |
+                    titlecase}}
+                  </div>
+                </div>
+                <div class="row mt-2">
+                  <div class="col-sm-4">
+                    <i class="fas fa-user-alt" style="color: black;"></i>: <b>{{vehicleToBeRented.seatingCapacity}}
+                      Person(s)</b>
+                  </div>
+                  <div class="col-sm-4">
+                    <i class="fas fa-gas-pump" style="color: black;"></i>:
+                    {{vehicleToBeRented.fuelType}}
+                  </div>
+                  <div class="col-sm-4">
+                    <img src="../../../../assets/gearbox.svg" width="20" height="20">:
+                    {{vehicleToBeRented.transmission}}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-sm-12" *ngIf="equipmentsAdded.length > 0">
+              <div class="alert alert-info">
+                <div class="fonts alert-heading">
+                  Additional Equipments Added
+                  <hr>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12" style="max-height: 200px; overflow: auto;">
+                    <ul class="list-group">
+                      <li class="list-group-item" *ngFor="let eachEquipment of equipmentsAdded">
+                        <span class="float-left">{{eachEquipment.equipment.equipmentName}}</span>
+                        <span class="float-right">x{{eachEquipment.quantity}}</span>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12" *ngIf="equipmentsAdded.length === 0">
+              <div class="alert alert-warning" style="height: 140px;">
+                <h5 class="alert-heading">No Additional Equipment</h5>
+                <hr>
+                No Additional Equipment Were Added To Your Rental
+              </div>
+            </div>
+          </div>
+
+          <div class="row mb-2">
+            <div class="col-sm-12">
+              <span class="float-right fonts p-1" style="font-size: 18px;">Total Cost For Your Rental: LKR -
+                {{totalCostForRental.toFixed(2)}}</span>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-6" style="height: 100px;">
-          <div class="alert alert-info">
-            <div class="fonts alert-heading">
-              Vehicle Information
-              <hr>
-            </div>
-            <div class="row mt-2">
-              <div class="col-sm-6">
-                Name : {{vehicleToBeRented.vehicleName}}
-              </div>
-              <div class="col-sm-6">
-                Type : {{vehicleToBeRented.vehicleType.size | titlecase}} {{vehicleToBeRented.vehicleType.typeName |
-                titlecase}}
-              </div>
-            </div>
-            <div class="row mt-2">
-              <div class="col-sm-4">
-                <i class="fas fa-user-alt" style="color: black;"></i>: <b>{{vehicleToBeRented.seatingCapacity}}
-                  Person(s)</b>
-              </div>
-              <div class="col-sm-4">
-                <i class="fas fa-gas-pump" style="color: black;"></i>:
-                {{vehicleToBeRented.fuelType}}
-              </div>
-              <div class="col-sm-4">
-                <img src="../../../../assets/gearbox.svg" width="20" height="20">:
-                {{vehicleToBeRented.transmission}}
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6" *ngIf="equipmentsAdded.length > 0">
-          <div class="alert alert-info">
-            <div class="fonts alert-heading">
-              Additional Equipments Added
-              <hr>
-            </div>
-            <div class="row">
-              <div class="col-sm-12" style="max-height: 250px; overflow: auto;">
-                <ul class="list-group">
-                  <li class="list-group-item" *ngFor="let eachEquipment of equipmentsAdded">
-                    <span class="float-left">{{eachEquipment.equipment.equipmentName}}</span>
-                    <span class="float-right">x{{eachEquipment.quantity}}</span>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6" *ngIf="equipmentsAdded.length === 0">
-          <div class="alert alert-warning" style="height: 140px;">
-            <h5 class="alert-heading">No Additional Equipment</h5>
-            <hr>
-            No Additional Equipment Were Added To Your Rental
-          </div>
-        </div>
-      </div>
 
-      <div class="row mb-2">
-        <div class="col-sm-12">
-          <span class="float-right fonts" style="font-size: 17px;">Total Cost For Your Rental: LKR -
-            {{totalCostForRental.toFixed(2)}}</span>
-        </div>
-      </div>
+
 
       <button class="btn btn-primary float-right" style="width: 25%;" matStepperNext>Next</button>
     </mat-step>
@@ -127,8 +138,8 @@
         </div>
         <div class="col-sm-6" style="text-align: center;">
 
-          <ngx-spinner [name]="'newOtherIdentity'" type="ball-clip-rotate" [fullScreen]="false" [bdColor]="'transparent'"
-            [color]="'black'" [size]="'medium'"></ngx-spinner>
+          <ngx-spinner [name]="'newOtherIdentity'" type="ball-clip-rotate" [fullScreen]="false"
+            [bdColor]="'transparent'" [color]="'black'" [size]="'medium'"></ngx-spinner>
 
           <div class="row">
             <div class="col-sm-12">
@@ -152,7 +163,7 @@
 
       <div class="row mb-2 mt-2">
         <div class="col-sm-12">
-          <span class="float-right fonts" style="font-size: 17px;">Total Cost For Your Rental: LKR -
+          <span class="float-right fonts p-1" style="font-size: 18px;">Total Cost For Your Rental: LKR -
             {{totalCostForRental.toFixed(2)}}</span>
         </div>
       </div>
