--- a/src/app/components/admin/admin-user-management/admin-user-management.component.html
+++ b/src/app/components/admin/admin-user-management/admin-user-management.component.html
@@ -24,7 +24,7 @@
       </select>
     </div>
     <div class="col-sm-4 align-self-center">
-      <button class="btn btn-primary float-right" (click)="resetFilters()">Reset Filter</button>
+      <button class="btn btn-primary float-right mr-2" (click)="resetFilters()">Reset Filter</button>
     </div>
   </div>
 
