--- a/src/app/components/admin/admin-user-management/admin-user-management.component.html
+++ b/src/app/components/admin/admin-user-management/admin-user-management.component.html
@@ -1,5 +1,16 @@
 <app-admin-nav></app-admin-nav>
-<app-bread-crumb [pageName]="'Customer Management'"></app-bread-crumb>
+<app-bread-crumb [pageName]="'User Management'"></app-bread-crumb>
+
+<div class="row" style="padding-bottom: 15px;">
+  <div class="col-sm-12" style="border-bottom: 1px solid #cacdcf;">
+    <div class="container">
+      <span class="header-left">
+        <button class="btn btn-secondary" [routerLink]="['/admin','users','admin']">Manage Administrators</button>
+      </span>
+      <span class="headers">Customers Registered at Banger and Co.</span>
+    </div>
+  </div>
+</div>
 
 <div class="container">
   <div class="row">
