--- a/src/app/components/admin/admin-user-management/administrator-list/admin-create/admin-create.component.html
+++ b/src/app/components/admin/admin-user-management/administrator-list/admin-create/admin-create.component.html
@@ -117,6 +117,9 @@
               provide the user with
               administrator rights.</span>
             <br>
+            <span style="color: red;font-size: 15px; font-style: italic;">Important - You can only create a total of 5
+              administrator accounts for Banger and Co.</span>
+            <br>
             <span style="color: black;font-size: 15px; font-style: italic">Important - The password will be the entered
               username</span>
           </div>
